
shared_DATA = \
	copyright.txt\
	levels.txt\
	level001\
	level002\
	level003\
	level004\
	level005\
	level006\
	level007\
	level008\
	level009\
	level010\
	level011\
	level012\
	level013\
	level014\
	level015\
	level016\
	level017\
	level018\
	level019\
	level020\
	level021\
	level022\
	level023\
	level024\
	level025\
	level026\
	level027\
	level028\
	level029\
	level030\
	level031\
	level032\
	level033\
	level034\
	level035\
	level036\
	level037\
	level038\
	level039\
	level040\
	level041\
	level042\
	level043\
	level044\
	level045\
	level046\
	level047\
	level048\
	level049\
	level050\
	level051\
	level052\
	level053\
	level054\
	level055\
	level056\
	level057\
	level058\
	level059\
	level060\
	level061\
	level062\
	level063\
	level064\
	level065\
	level066\
	level067\
	level068\
	level069\
	level070\
	level071\
	level072\
	level073\
	level074\
	level075\
	level076\
	level077\
	level078\
	level079\
	level080\
	level081\
	level082\
	level083\
	level084\
	level085\
	level086\
	level087\
	level088\
	level089\
	level090\
	level091\
	level092\
	level093\
	level094\
	level095\
	level096\
	level097\
	level098\
	level099\
	level100\
	audiooff.png\
	audioon.png\
	click2.ogg\
	click.ogg\
	failure.ogg\
	glitch.ogg\
	logo.png\
	menu.png\
	next.png\
	pause.png\
	phlip.ogg\
	quit.png\
	reset.png\
	start.png\
	success.ogg\
	theme.ogg\
	tut1.png\
	tut2.png\
	tut3.png\
	leftright.png\
	ubuntu_0.png\
	ubuntu.fnt\
	support_android.png\
	support_apple.png

shareddir = \
	$(pkgdatadir)

EXTRA_DIST = \
	$(shared_DATA)

